DHParser Version 1.8.0
......................

- optional speed optimizations (experimental!) that work by compiling
  certain parts of the grammar to regular expressions. See config value
  "optimizations" or put "@optimizations=all" at the top of your grammar.
- fast-path for Series-parser, in case no items are marked as mandatory
- serializations for xast and unist ("ndst") added.
  See https://github.com/syntax-tree/unist
  and https://github.com/syntax-tree/xast

DHParser Version 1.7.2 (22.2.2024)
..................................

- removed unnecessary directories from pyproject.toml, e.g.
  tests, documentation_src... These are not required for
  running DHParser and can always be obtained from git
- comments inside insignificant whitespace can now be retained
  by adding "no_comments"[sic!] to the @drop-directive
- DHParser now comes with a few predefined parsing-functions
  in DHParser.parsers. For now, there is parse_HTML and parse_XML
  (in contrast to nodetree.parse_xml, the latter is slower, but
  strictly adheres to the XML-grammar of the W3C except
  DTDs inside an XML-document, which is not supported)
- ebnf-grammar now allows to specify character ranges with
  (e.g.) "[\x00CD-\x0CFD]" (EXPERIMENTAL)


DHParser Version 1.7.1 (28.1.2024)
..................................

- case insensitive plain-text-parser added (parse.IgnoreCase)
- [config]-section in test-files is now repeated in the report
- Documentation for parse.ParsingError-class
- compile.py: better error message for missing visitor-methods
- HTML-Grammar added to examples/XML
- bugfixes and a few more tests
- more work on experimental nim-rewrite of the parser-core:
  enough parser-classes for standard EBNF, plus error-recovery

DHParser Version 1.7
....................

- refactoring: processing-pipeline-support now in a dedicated module

DHParser Version 1.6.1 (27.10.2023)
...................................

- Better support for processing-pipelines: compile.py, dsl.py