@@ -86,7 +86,7 @@ class FixedEBNFGrammar(Grammar):
     element = Forward()
     expression = Forward()
     source_hash__ = "c8717d2da53f2a4daa056a91cc620009"
-    disposable__ = re.compile('(?:EOF$|pure_elem$|component$|countable$|MOD_SYM$|is_mdef$|FOLLOW_UP$|MOD_SEP$|no_range$|ANY_SUFFIX$)')
+    disposable__ = re.compile('(?:countable$|no_range$|EOF$|is_mdef$|component$|pure_elem$|MOD_SYM$|FOLLOW_UP$|ANY_SUFFIX$|MOD_SEP$)')
     static_analysis_pending__ = []  # type: List[bool]
     parser_initialization__ = ["upon instantiation"]
     error_messages__ = {'definition': [(re.compile(r','), 'Delimiter "," not expected in definition!\\nEither this was meant to be a directive and the directive symbol @ is missing\\nor the error is due to inconsistent use of the comma as a delimiter\\nfor the elements of a sequence.')]}
