@@ -108,7 +108,7 @@ class FlexibleEBNFGrammar(Grammar):
     element = Forward()
     expression = Forward()
     source_hash__ = "1c42d6c43039fca915bdd6651f0418b2"
-    disposable__ = re.compile('(?:ANY_SUFFIX$|FOLLOW_UP$|MOD_SEP$|is_mdef$|countable$|pure_elem$|MOD_SYM$|no_range$|EOF$|component$)')
+    disposable__ = re.compile('(?:component$|MOD_SYM$|MOD_SEP$|is_mdef$|pure_elem$|EOF$|ANY_SUFFIX$|FOLLOW_UP$|countable$|no_range$)')
     static_analysis_pending__ = []  # type: List[bool]
     parser_initialization__ = ["upon instantiation"]
     error_messages__ = {'definition': [(re.compile(r','), 'Delimiter "," not expected in definition!\\nEither this was meant to be a directive and the directive symbol @ is missing\\nor the error is due to inconsistent use of the comma as a delimiter\\nfor the elements of a sequence.')]}
